<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context="com.example.korgua.dogorcatperson.MainActivity">

    <ScrollView
        android:id="@+id/scrollViewId"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/canine_text"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@android:color/black"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RadioGroupCanineId"
                android:paddingStart="40sp"
                android:paddingEnd="40sp"
                >
                <RadioButton
                    android:id="@+id/radioCanineNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_text"
                    android:textSize="@dimen/mediumText"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp"/>
                <RadioButton
                    android:id="@+id/radioCanineYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes_text"
                    android:textSize="@dimen/mediumText"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp"/>
            </RadioGroup>
            <TextView
                android:paddingRight="30sp"
                android:paddingLeft="30sp"
                android:paddingTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_text"
                android:textSize="@dimen/mediumText"
                android:textColor="@android:color/black"

                />
            <SeekBar
                android:layout_width="230dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:max="100"
                android:id="@+id/seekBarFelineId"/>
            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_seekbarText"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/mediumText"
                android:textColor="@android:color/black"
                android:id="@+id/seekBarFelineTextViewId"
                />
            <TextView
                android:paddingRight="30sp"
                android:paddingLeft="30sp"
                android:paddingTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cutest_text"
                android:textSize="@dimen/mediumText"
                android:textColor="@android:color/black"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_dog"
                android:id="@+id/cutesDog"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_cat"
                android:id="@+id/cutesCat"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_parrot"
                android:id="@+id/cutesParrot"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                />
            <TextView
                android:paddingRight="30sp"
                android:paddingLeft="30sp"
                android:paddingTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drool_text"
                android:textSize="@dimen/mediumText"
                android:textColor="@android:color/black"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioDroolID"
                android:paddingStart="40sp"
                android:paddingEnd="40sp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mediumText"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp"
                    android:text="@string/no_text"
                    android:id="@+id/radioDroolNo"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mediumText"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp"
                    android:text="@string/yes_text"
                    android:id="@+id/radioDroolYes"
                    />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showResults"
        app:layout_constraintTop_toBottomOf="@id/scrollViewId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/showResult"
        />

</android.support.constraint.ConstraintLayout>
